# Simulations-OpenGL

./: .gitignore  BoundingBox.h  CMakeLists.txt  ComputeHelper.h  README.md  README_2D_Version.md  camera.h  debug.txt  mesh.cpp  mesh.h  model.cpp  shader.cpp  shader.h  thread_pool.h  window.cpp  window2d.cpp
Collision System/: Nsolver.cpp  Nsolver.h  collision_system.cpp  constants.h  grid.h  mapPixel.h  particle.h  solver.cpp  solver.h  stb_image_impl.cpp  thread.hpp  threadPool.cpp  threadPool.h  utils.cpp  utils.h  window2d.cpp
Marching Cubes/: CubeMarching.compute  CubeMarching.cpp  CubeMarching.h  GPUMarchCubes.cpp  GPUMarchCubes.h  debugBVH.cpp  tables.h  test.cpp  testCPUBunny.cpp  testGPU.cpp
Rubiks/: RCube.mtl  RubiksCube.cpp  RubiksCube.h  input.cpp  input.h  mouse_selector.cpp  mouse_selector.h  window.cpp
Rubiks/include/: CubeConversion.h  CubeStateMachine.h  CubeTypes.h  RubiksCube.h  ai rubiks.h  audio.h  globals.h  mouse_selector.h
Rubiks/src/: CubeConversion.cpp  CubeStateMachine.cpp  RubiksCube.cpp  ai rubiks.cpp  audio.cpp  mouse_selector.cpp  window.cpp
Rubiks/tests/support/: RubiksCube_stubs.cpp
Rubiks/tests/unit/: solver_test.cpp  state_validation.cpp
SPHFluid/: GPUSort.cpp  GPUSort.h
SPHFluid/2D/: GPUFluidSimulation.h  GPUFluidSimulation2D.cpp  GPUParticleDisplay.cpp  GPUParticleDisplay.h  gpuFluidWindow.cpp
SPHFluid/3D/: BoundingBox.cpp  BoundingBox.h  GPUFluidSimulation.cpp  GPUFluidSimulation.h  GPUFluidSimulation3D.h  GPUParticleDisplay.cpp  GPUParticleDisplay.h  GPUParticleDisplay3D.cpp  GPUParticleDisplay3D.h  window3D.cpp
SPHFluid/shaders/: BitonicSort.compute  CubeMarching.compute  FluidSim-2D.compute  FluidSim-3D.compute  particle2d.fs  particle2d.vs  particle3d.fs  particle3d.vs
audio/: audio.h  sfml_audio_test.cpp
docs/: API_DOCUMENTATION.md  DEVELOPER_GUIDE.md  QUICK_START_GUIDE.md
geometry/: GeometryData_README.md  circle.h  cube.h  geometry_data.cpp  geometry_data.h  parametric.cpp  parametric.h  polygon.cpp  polygon.h  sphere.cpp  sphere.h
scripts/: collision_sys.py  quad_tree.py  query_compute_limits.py
shaders/: fragment.fs  infinite_grid.fs  normal_debug.fs  normal_debug.gs  normal_debug.vs  rubiks.fs  simple_fragment.fs  textured_fragment.fs  vertex.vs
